<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2015 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
-->

<resources>
    <string name="app_name">Red de Mascotas</string>
    <string name="app_id">1678287159056803</string>
    <string name="map_api_key">AIzaSyAjGZfKR36Y0xL9j4ATtEoWlTvif712kqw</string>
    <!-- API KEY FABRI <string name="map_api_key">AIzaSyAjGZfKR36Y0xL9j4ATtEoWlTvif712kqw</string> -->
    <!-- API KEY JAS <string name="map_api_key">AIzaSyCEsqjDCl4r9oIcmeEoSJF7GI8x9yXveTI</string> -->
    <!--<string name="map_api_key">AIzaSyAjGZfKR36Y0xL9j4ATtEoWlTvif712kqw</string>-->
    <string name="cheese_ipsum">Jarlsberg lancashire dalmata. Dolcelatte hard cheese brie st. agur blue
    cheese caerphilly bavarian bergkase cheese and biscuits mascarpone. Cheeseburger swiss bavarian
    bergkase cream cheese fromage frais cheesy feet port-salut airedale. St. agur blue cheese rubber
    cheese caerphilly cheddar cheesecake cream cheese manchego lancashire. Roquefort squirty cheese
    the big cheese.</string>
    <string name="checkin">Checkin</string>
    <string name="menu_settings">Opciones</string>
    <string name="username">Fabrizio Graffe</string>
    <string name="title_activity_login">Red de Mascotas</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="report_complain">Denunciar</string>
    <string name="share">Compartir</string>

    <string name="facebook_app_name">HelloFBSample</string>
    <string name="cancelled">Cancelar</string>
    <string name="permission_not_granted">Unable to perform selected action because permissions were not granted.</string>
    <string name="ok">OK</string>
    <string name="hello_user">Hello %1$s!</string>
    <string name="success">Success</string>
    <string name="successfully_posted_post">Post ID: %1$s</string>
    <string name="error">Error</string>
    <string name="status_update">Updating status for %1$s at %2$s</string>
    <string name="photo_post">Photo Post</string>
    <string name="you_picked">You picked:</string>
    <string name="no_friends_selected">&lt;No friends selected&gt;</string>
    <string name="no_place_selected">&lt;No place selected&gt;</string>
    <string name="pick_seattle_place">Pick a Seattle Place</string>

    <string name="exception">Exception: %1$s</string>
    <string name="Title">Red de Mascotas</string>
    <string name="Ingresar">Ingresar con cuenta</string>

    <string name="title_activity_login_user">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_user">Usuario</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Ingresar</string>
    <string name="crear_nueva_cuenta">¿Aún no tenés cuenta?</string>
    <string name="registrate">Registrate</string>

    <!-- errors -->
    <string name="error_invalid_user">Usuario inválido</string>
    <string name="error_invalid_email">Email inválido</string>
    <string name="error_invalid_password">Contraseña inválida. La cantidad mínima de caracteres es 6</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">Este campo es requerido</string>
    <string name="error_required_fields_left">Quedan campos requeridos sin completar</string>



    <string name="login_button_text">Ingresar con Facebook</string>
    <string name="offer_in_adoption">Ofrecer en adopción</string>
    <string name="search_result_list">Resultados de la búsqueda</string>
    <string name="lost_pet">Perdí a mi mascota</string>
    <string name="found_pet">Encontré una mascota</string>
    <string name="notification">Notificaciones</string>
    <string name="search_in_adoption">Búsqueda de mascotas en adopción</string>
    <string name="adopt">Buscar</string>
    <string name="report_missing">Perdí una mascota</string>
    <string name="report_found">Encontré una mascota</string>
    <string name="invite_a_friend">Invitar a un amigo</string>
    <string name="config">Ajustes</string>
    <string name="about">Acerca de</string>
    <string name="nombreLabel">Nombre:</string>
    <string name="logout_msg">Salir</string>
    <string name="razaLabel">Raza:</string>
    <string name="tipoLabel">Tipo:</string>
    <string name="sexoLabel">Sexo:</string>
    <string name="edadLabel">Edad:</string>
    <string name="tamanioLabel">Tamaño:</string>
    <string name="ubicacionLabel">Ubicación:</string>
    <string name="colorPelajeLabel">Color de pelaje:</string>
    <string name="colorOjosLabel">Color de ojos:</string>
    <string name="title_activity_logout">LogoutActivity</string>
    <string name="logout_facebook">Desloguearse Facebook</string>
    <string name="title_activity_register">Registro</string>
    <string name="title_activity_register2">Registro</string>
    <string name="new_account">Nueva cuenta</string>
    <string name="register_next">Siguiente</string>
    <string name="quiereAdoptar">Quieren adoptar a </string>
    <string name="contactoLabel">Contacto: </string>
    <string name="register_end">Finalizar</string>
    <string name="addressNum">Num</string>
    <string name="address">Calle</string>
    <string name="neighbourhood">Barrio</string>
    <string name="telephone">Teléfono</string>
    <string name="firstAndLastName">Nombre y apellido</string>
    <string name="back">Volver</string>
    <string name="firstName">Nombre</string>
    <string name="lastName">Apellido</string>
    <string name="dialogTitle">Alerta</string>
    <string name="confirmacionAdopcion">¿Desea adoptar esta mascota?</string>
    <string name="agree">Acepto</string>
    <string name="dialogSi"> Sí </string>
    <string name="dialogNo"> No </string>
    <string name="dialogDone">Listo</string>
    <string name="dialogCancel">Cancelar</string>
    <string name="dialogSend">Enviar</string>
    <string name="dialogPublish">Publicar</string>
    <string name="title_activity_report_lost_pet">ReportLostPet</string>
    <string name="title_activity_map">Ultima vez visto en</string>
    <string name="aceptarAdopcion">Aceptar</string>
    <string name="error_invalid_re_password">Debe coincidir con la contraseña</string>


</resources>
