<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2015 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/features"
        android:checkableBehavior="single">
        <item
            android:id="@+id/adopt"
            android:title="@string/adopt"
            android:icon="@drawable/ic_search_black_24dp" />
        <item
            android:id="@+id/offer_in_adoption"
            android:icon="@drawable/ic_favorite_black_24dp"
            android:title="@string/offer_in_adoption" />
        <item
            android:id="@+id/notification"
            android:icon="@drawable/ic_sms_failed_black_24dp"
            android:title="@string/notification" />
        <item
            android:id="@+id/report_missing"
            android:icon="@drawable/ic_report_black_24dp"
            android:title="@string/report_missing" />
        <item
            android:id="@+id/report_found"
            android:icon="@drawable/ic_send_black_24dp"
            android:title="@string/report_found" />
    </group>
    <group
        android:id="@+id/others"
        android:checkableBehavior="single">

        <item
            android:id="@+id/config"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/config" />
        <item
            android:id="@+id/about"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/about" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_power_settings_new_black_24dp"
            android:title="@string/logout_msg"/>
    </group>
    <!-- <item android:title="Otros"> -->

</menu>
