<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.support.android.designlibdemo.PublishInAdoptionActivity2">

    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar_publish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar_register"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:elevation="3dp"
                android:subtitleTextColor="#ffffff"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/Theme.DesignDemo" />


            <RelativeLayout
                android:id="@+id/publish_subtitle_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#263238"
                android:minHeight="?attr/actionBarSize">

                <TextView
                    android:id="@+id/new_account_tittle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:gravity="bottom"
                    android:paddingLeft="20dp"
                    android:text="@string/new_account"
                    android:textAllCaps="false"
                    android:textAppearance="@style/TabTextStyle"
                    android:textColor="#ffffff"
                    android:textSize="30dp"
                    android:textStyle="bold" />

            </RelativeLayout>


        </android.support.design.widget.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


        </ScrollView>

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="130dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/fieldsLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/linearLayout1"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="70dp"
                android:layout_marginBottom="40dp"
                android:orientation="vertical">

                <!--  Name Label -->
                <LinearLayout
                    android:id="@+id/user_register_name"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_gravity="center_vertical">

                    <ImageView
                        android:id="@+id/user_register_image_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|left"
                        android:src="@drawable/persona_48dp" />

                    <EditText
                        android:id="@+id/input_name"
                        android:layout_width="112dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/firstName"
                        android:inputType="textPersonName" />

                    <EditText
                        android:id="@+id/input_lastName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/lastName"
                        android:inputType="textPersonName"
                        android:layout_weight="1" />
                </LinearLayout>

                <!-- Telephone Label -->
                <LinearLayout
                    android:id="@+id/user_register_pass"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_gravity="center_vertical">

                    <ImageView
                        android:id="@+id/user_register_image_pass"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|left"
                        android:src="@drawable/telefono_48dp" />

                    <EditText
                        android:id="@+id/input_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/telephone"
                        android:inputType="phone" />
                </LinearLayout>

                <!-- Address Label -->
                <LinearLayout
                    android:id="@+id/user_register_address"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp">

                    <ImageView
                        android:id="@+id/user_register_image_mail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|left"
                        android:src="@drawable/casa_48dp" />

                    <EditText
                        android:id="@+id/input_addressNum"
                        android:layout_width="117dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/addressNum"
                        android:inputType="textPostalAddress" />

                    <EditText
                        android:id="@+id/input_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/address"
                        android:inputType="textPostalAddress"
                        android:layout_weight="1" />
                </LinearLayout>
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/user_register_button"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_below="@id/fieldsLayout"
                android:gravity="center">

            </RelativeLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/button_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:alpha="0.75"
                android:padding="12dp"
                android:text="@string/back"
                android:textStyle="bold"
                android:layout_below="@+id/user_register_button"
                android:layout_alignLeft="@+id/fieldsLayout"
                android:layout_alignStart="@+id/fieldsLayout"
                android:layout_marginLeft="67dp"
                android:layout_marginStart="67dp" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/button_finish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:alpha="0.75"
                android:background="#2196F3"
                android:padding="12dp"
                android:text="@string/register_end"
                android:onClick="finish"
                android:textAllCaps="true"
                android:layout_marginLeft="46dp"
                android:textColor="#ffffff"
                android:layout_below="@+id/user_register_button"
                android:layout_toRightOf="@+id/button_back"
                android:layout_toEndOf="@+id/button_back"
                android:layout_marginStart="46dp" />

            <AutoCompleteTextView
                android:id="@+id/input_neighbourhood"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/neighbourhood"
                android:inputType="textAutoComplete"
                android:layout_weight="1"
                android:layout_above="@+id/user_register_button"
                android:layout_alignRight="@+id/fieldsLayout"
                android:layout_alignEnd="@+id/fieldsLayout"
                android:layout_toRightOf="@+id/imageView"
                android:layout_toEndOf="@+id/imageView" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|left"
                android:src="@drawable/casa_48dp"
                android:layout_above="@+id/user_register_button"
                android:layout_alignLeft="@+id/fieldsLayout"
                android:layout_alignStart="@+id/fieldsLayout" />

        </RelativeLayout>

    </android.support.design.widget.CoordinatorLayout>

</RelativeLayout>
