<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2015 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true" >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/perro_gato">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/logo_blanco" />

        <com.facebook.login.widget.LoginButton
            android:id="@+id/fb_login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            facebook:login_text="@string/login_button_text"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:padding="0dp"
            android:layout_gravity="center_horizontal"
            android:alpha="0.75" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:textStyle="bold"
            android:text="@string/Ingresar"
            android:layout_gravity="center_horizontal"
            android:alpha="0.75"
            android:background="@color/material_grey_600" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView android:id="@+id/link_signup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/crear_nueva_cuenta"

                android:gravity="center"
                android:textSize="16dip"
                android:textColor="#ffffff"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_toLeftOf="@+id/btn_reg"
                android:layout_toStartOf="@+id/btn_reg" />
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_reg"
                android:onClick="toRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="Registrate"
                android:alpha="0.75"
                android:textStyle="italic"
                android:background="@color/material_grey_600"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="44dp"
                android:layout_marginEnd="44dp" />
        </RelativeLayout>


    </LinearLayout>
</ScrollView>

